--- a/app/src/main/res/drawable/custom_fb_button.xml
+++ b/app/src/main/res/drawable/custom_fb_button.xml
@@ -6,5 +6,7 @@
         android:bottomLeftRadius="25dp"
         android:bottomRightRadius="25dp"/>
 
-    <solid android:color="#cbae82"/>
+
+    <solid android:color="@color/fb_blue"/>
+
 </shape>
