--- a/app/src/main/res/layout/basket_item.xml
+++ b/app/src/main/res/layout/basket_item.xml
@@ -12,81 +12,78 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/foodPic"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:foodPic="@{basketFood.food.photoURL}"
-            />
+        android:layout_height="wrap_content"
+        android:background="#ffe0b2">
 
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="@{basketFood.food.name}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintStart_toEndOf="@+id/foodPic"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@{basketFood.food.name}" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Qty"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Quantity"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_name"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/quantitySpinner"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            />
-
+            app:layout_constraintVertical_bias="1.0" />
 
         <Spinner
             android:id="@+id/quantitySpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="176dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
             android:entries="@array/quantity_string_array"
+            android:scrollbarSize="16dp"
             android:setVal="@{basketFood.quantity}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_quantity"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.666" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_quantity" />
 
         <ImageButton
             android:id="@+id/deleteFoodButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:background="?android:attr/selectableItemBackground"
             android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/quantitySpinner"
-            app:layout_constraintStart_toEndOf="@+id/quantitySpinner"
-            app:layout_constraintTop_toTopOf="@+id/quantitySpinner"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
         <TextView
             android:id="@+id/totalPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="@{String.valueOf(basketFood.food.price * basketFood.quantity)}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            android:text="@{String.valueOf(basketFood.food.price * basketFood.quantity)}" />
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
