--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
     <data>
         <variable
@@ -18,7 +19,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="#EEEEEE"
+        android:background="#ffe0b2"
         android:orientation="vertical"
         android:onClick="@{()-> foodInterface.onItemClick(food)}">
 
@@ -28,8 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_centerVertical="true"
-            android:layout_marginTop="16dp"
             android:foodPic="@{food.photoURL}"
+            android:scaleType="centerCrop"
         />
 
         <TextView
@@ -62,17 +63,17 @@
             android:textSize="12sp"
             android:textAlignment="center" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_to_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
-            android:text="ADD TO CART"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/buttons"
+            android:fontFamily="@font/open_sans_bold"
             android:onClick="@{()-> foodInterface.addItem(food)}"
-            />
+            android:text="ADD TO CART" />
 
 
     </LinearLayout>
