--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffe4">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,6 +18,7 @@
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/food_item"
+            android:padding="16dp"
             />
 
         <Space
@@ -34,13 +36,17 @@
 
         <Button
             android:id="@+id/placeOrderButton"
-            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="8dp"
-            android:text="Place Order"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/open_sans_bold"
+
+
+
+            android:text="ORDER"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textSize="18sp" />
 
     </LinearLayout>
 </ScrollView>
