--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -26,7 +26,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars"
-            android:foodPic="@{foodListViewModel.foodModel.photoURL}"/>
+            android:foodPic="@{foodListViewModel.foodModel.photoURL}"
+            android:layout_centerVertical="true"/>
 
         <TextView
             android:id="@+id/tv_name"
@@ -76,22 +77,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_type" />
 
-        <Button
-
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_to_cart"
-            android:background="@drawable/buttons"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/buttons"
+            android:enabled="true"
+            android:fontFamily="@font/open_sans_bold"
+            android:onClick="@{() -> foodListViewModel.addFoodToBasket(foodListViewModel.foodModel)}"
             android:text="ADD TO CART"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            android:enabled="true"
-            android:onClick="@{() -> foodListViewModel.addFoodToBasket(foodListViewModel.foodModel)}"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
