--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -8,23 +8,25 @@ android:orientation="vertical"
 android:gravity="center"
     >
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Thanks for your order."
-    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-    />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/open_sans_extrabold"
+        android:text="Enjoy your food!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="#333333" />
 
 <Space
     android:layout_width="match_parent"
-    android:layout_height="16dp"/>
+    android:layout_height="32dp"/>
 
-<Button
-    android:id="@+id/continueShoppingButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    style="@style/Widget.MaterialComponents.Button.TextButton"
-    android:text="Continue Shopping"
-    />
+    <Button
+        android:id="@+id/continueShoppingButton"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="Continue Shopping"
+        android:textColor="#333333" />
 
 </LinearLayout>
