--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,12 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/basketFragment"
-        android:title = "Basket"
-        android:icon="@drawable/ic_baseline_shopping_cart_24"
-        app:showAsAction="always"
-        />
-
     <item
         android:id="@+id/logout"
         android:title="Logout"/>
@@ -22,9 +16,8 @@
 
     <item android:id="@+id/settingsActivity"
         android:title="Settings"
-        android:icon="@drawable/ic_baseline_settings_24"
+        android:icon="@drawable/profile"
         app:showAsAction="always"
-
         />
 </menu>
 
